<resources>
    <string name="app_name">K-POS</string>
    <string name="AppNames">K-POS</string>
    <string name="inputEmail">Mobile number or email</string>
    <string name="hintEmail">kpos@mail.ugm.ac.id</string>
    <string name="inputPassword">Password</string>
    <string name="hintPassword">a1ncZs.GG</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="textForgetPassword">Forget Password?</string>
    <string name="textDontHaveAccount">don\'t have account?</string>
    <string name="textFirstName">First Name</string>
    <string name="hintFirstName">Nur Ardia</string>
    <string name="textLastName">Last Name</string>
    <string name="hintLastName">Rahmawati</string>
    <string name="textEmail">Email</string>
    <string name="textPhoneNumber">Phone Number</string>
    <string name="hintPhoneNumber">082218193407</string>
    <string name="textConfirmPassword">Confirm Password</string>
    <string name="textAlreadyHaveAccount">already have account?</string>
    <string name="store_name">Store Name</string>
    <string name="hintStoreName">Nur Ardia Store</string>
    <string name="txtStorePhoneNumber">Store Phone Number</string>
    <string name="txtCity">City</string>
    <string name="hintCity">Yogyakarta</string>
    <string name="txtAddress">Address</string>
    <string name="hintAddress">Blimbingsari CT IV No 44 Yogyakarta</string>
    <string name="txtNext">Next</string>
    <string name="textSuccess">Register Success!</string>
    <string name="txtAlertSuccess">Check your email register for the complete information</string>
    <string name="txtBalance">120.000</string>
    <string name="txtActionBarName">K-POS PENJUAL</string>
    <string name="txtAdvanced">Advanced Setting</string>
    <string name="txtInfoInNote">Information in note</string>
    <string name="txtHelpMenu">Help</string>
    <string name="txtAbout">About K-POS</string>
    <string name="txtDeleteAccount">Delete account</string>
    <string name="txtEditStoreProfile">Edit store profile</string>
    <string name="txtVersionApp">Version 1.0.0</string>
    <string name="txtDiscountNominal">Discount Nominal (Rp)</string>
    <string name="hintDiscountNominal">Example : 3</string>
    <string name="txtMaximumPrice">Maximum Price (Rp)</string>
    <string name="txtDiscountTitle">Discount Title</string>
    <string name="hintDiscountTitle">Example : Discount New Year</string>

    <!--    this is menu string-->
    <string name="menuOpenStore">Open Store</string>
    <string name="menuManageProduct">Manage Product</string>
    <string name="menuOnlineOrder">Online Order</string>
    <string name="menuOfflineOrder">Start Offline Order</string>
    <string name="menuHistory">History</string>
    <string name="menuReport">Report</string>
    <string name="menuSetting">Setting</string>
    <string name="txtLocation">Choose Location</string>
    <string name="txtManageDiscounts">Manage Discounts</string>
    <string name="txtManageTax">Manage Tax</string>
    <string name="txtManagePrinter">Manage Printer</string>
    <string name="txtManageReceipt">Manage Receipt</string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="txtExit">Exit</string>
    <string name="txtSaveChanges">Save changes</string>

    <!--    this si for choose yes or no-->
    <string name="SelectYes">Yes</string>
    <string name="SelectNo">No</string>
    <string name="SelectAccept">Accept</string>
    <string name="SelectCancel">Cancel</string>

    <!--    this is dummy string-->
    <string name="txtDummy">
        Terima kasih telah membeli produk kami.\n
        semoga kamu menikmatinya.\n
        semua produk kami dibuat dengan\n
        perhatian besar terhadap detail.\n
        kami berusaha untuk memberikan\n
        kamu produk terbaik.\n
        \n
        Kami akan menyukai tanggapan kamu.\n
        silakan kirim pesan kepada kami untuk\n
        memberi tahu bagaimana kami selanjutnya.
    </string>
    <string name="txtDiscountList">Discount List</string>
    <string name="txtAddNewDiscount">Add new discount?</string>
    <string name="txtAddNewTax">Add new tax?</string>
    <string name="txtTaxNominal">Tax Nominal (Rp)</string>
    <string name="txtTaxTitle">Tax Title</string>
    <string name="hintTaxTitle">Example : Food Tax</string>
    <string name="txtTaxList">Tax List</string>
    <string name="hintSearchTransaction">Search for transaction</string>
    <string name="txtFilter">Filter</string>
    <string name="txtDummyReport">Minggu ini, 12 Maret 2020</string>
    <string name="txtSelectAll">Select All</string>
    <string name="dummyName">Ningrum</string>
    <string name="dummy_Time">14.00 WIB</string>
    <string name="dummy_location_order">Meja 5, Kantin HY UGM</string>
    <string name="text_rp">Rp</string>
    <string name="textDateOfBirth">Date of Birth</string>
    <string name="textName">Name</string>


</resources>
