<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppWhiteColor"
    tools:context=".RegisterScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:id="@+id/txtInputFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/textFirstName"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintFirstName"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputFirstName" />

        <TextView
            android:id="@+id/txtInputLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/textLastName"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputFirstName" />

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintLastName"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputLastName" />

        <TextView
            android:id="@+id/txtInputEmailRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/textEmail"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLastName"/>

        <EditText
            android:id="@+id/inputEmailRegis"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputEmailRegis" />

        <TextView
            android:id="@+id/txtInputPhoneNumberRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/textPhoneNumber"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmailRegis"/>

        <EditText
            android:id="@+id/inputPhoneNumberRegis"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintPhoneNumber"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputPhoneNumberRegis" />

        <TextView
            android:id="@+id/txtInputPasswordRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/inputPassword"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPhoneNumberRegis"/>

        <EditText
            android:id="@+id/inputPasswordRegis"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputPasswordRegis" />

        <TextView
            android:id="@+id/txtInputPasswordConfirmRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/textConfirmPassword"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPasswordRegis"/>

        <EditText
            android:id="@+id/inputPasswordConfirmRegis"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputPasswordConfirmRegis" />

        <Button
            android:id="@+id/btnRegister"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="42dp"
            android:background="@drawable/selector_btn"
            android:fontFamily="@font/sspsemibold"
            android:text="@string/register"
            android:textColor="@color/AppWhiteColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPasswordConfirmRegis" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:paddingBottom="37dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister">

            <TextView
                android:id="@+id/txtDummyRegis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sspreguler"
                android:text="@string/textAlreadyHaveAccount"
                android:textColor="@color/AppLightBluefontColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/sspreguler"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/AppBackgroundColor"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>