<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppWhiteColor"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/txtInputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sspreguler"
        android:text="@string/inputEmail"
        android:textColor="@color/AppgrayfontColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_menu"
        android:fontFamily="@font/sspreguler"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingTop="12dp"
        android:paddingEnd="15dp"
        android:paddingBottom="12dp"
        android:textColor="@color/AppfontColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputEmail" />

    <TextView
        android:id="@+id/txtInputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/sspreguler"
        android:text="@string/inputPassword"
        android:textColor="@color/AppgrayfontColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_menu"
        android:fontFamily="@font/sspreguler"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="12dp"
        android:paddingEnd="15dp"
        android:paddingBottom="12dp"
        android:textColor="@color/AppfontColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/sspsemibold"
        android:background="@drawable/selector_btn"
        style="?attr/borderlessButtonStyle"
        android:textColor="@color/AppWhiteColor"
        />


</androidx.constraintlayout.widget.ConstraintLayout>