<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileStoreScreen">

    <RelativeLayout
        android:id="@+id/CustomeActionBarEditProfileStore"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/AppBackgroundColor"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sspbold"
            android:text="@string/txtEditStoreProfile"
            android:textColor="@color/AppWhiteColor"
            android:textSize="18sp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CustomeActionBarEditProfileStore">

        <TextView
            android:id="@+id/txtInputStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sspreguler"
            android:text="@string/store_name"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputStoreName"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintStoreName"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputStoreName" />

        <TextView

            android:id="@+id/txtInputStorePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/txtStorePhoneNumber"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputStoreName" />

        <EditText

            android:id="@+id/inputStorePhone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintPhoneNumber"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputStorePhone" />

        <TextView
            android:id="@+id/txtInputStoreCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/txtCity"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputStorePhone" />

        <EditText
            android:id="@+id/inputStoreCity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintCity"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputStoreCity" />

        <TextView
            android:id="@+id/txtInputStoreAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sspreguler"
            android:text="@string/txtAddress"
            android:textColor="@color/AppgrayfontColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputStoreCity" />

        <EditText
            android:id="@+id/inputStoreAddress"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_menu"
            android:fontFamily="@font/sspreguler"
            android:hint="@string/hintAddress"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textColor="@color/AppfontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputStoreAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F5F5F5"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_edit_profile_store_save"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_btn"
            android:fontFamily="@font/sspsemibold"
            android:text="@string/txtSaveChanges"
            android:textColor="@color/AppWhiteColor"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>